--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!!
-  </h1>
-  
+<h1>GeoCalendar</h1>
+<nav>
+  <ul>
+    <div class="container-fluid">
+      <div class="row">
+        <li class="col-md-4">Home</li>
+        <li class="col-md-4">History</li>
+        <li class="col-md-4">Statistics</li>   
+      </div>
+         
+    </div>  
+    
+  </ul>
+</nav>
+<app-calendar></app-calendar>
