Added service for retriving marker locations from localstorage and form for adding marker

--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -1,6 +1,6 @@
 * {box-sizing:border-box;}
 ul {list-style-type: none;}
-body {font-family: Verdana,sans-serif;
+body {font-family:"Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;;
    
 }
 
