--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,25 @@
-<!--The whole content below can be removed with the new code.-->
-<h1>GeoCalendar</h1>
-<nav>
-  <ul>
-    <div class="container-fluid">
-      <div class="row">
-        <li class="col-md-4">Home</li>
-        <li class="col-md-4">History</li>
-        <li class="col-md-4">Statistics</li>   
+
+ <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">GeoCalendar</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-         
-    </div>  
-    
-  </ul>
-</nav>
+    </nav>
+
+   
+
 <app-calendar></app-calendar>
