--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,8 +1,8 @@
 
 	<div class="month" id="mounth">
 		<ul>
-			<li class="prev" (click) = "changeMonth($event)" >&#10094;</li>
-			<li class="next" (click) = "changeMonth($event)">&#10095;</li>
+			<li class="prev" (click) = "changeDate($event)" >&#10094;</li>
+			<li class="next" (click) = "changeDate($event)">&#10095;</li>
 			<li style="text-align:center">
 				<span id="mounthField">{{month}}</span><br>
 				<span id="year" style="font-size:18px">{{year}}</span>
@@ -21,10 +21,10 @@
 	</ul>
 
 	<ul class="days" id="days" >
-		<li *ngFor='let day of days' ><div [ngClass]="day === currentDay ? 'selected' : ''">{{day}}</div> </li>
+		<li *ngFor='let day of days' ><div  (click) = "dayClicked($event)" [ngClass]="day === currentDay ? 'selected' : ''">{{day}}</div> </li>
 	</ul>
 	
 	
 
-	<geo-map></geo-map>
+	<geo-map [currentKey] = "currentKey"></geo-map>
   
