--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,18 +8,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">GeoCalendar</a>
+          <a class="navbar-brand"[routerLink] = "['/calendar']">GeoCalendar</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a [routerLink] = "['/calendar']">Home</a></li>
+            <li><a [routerLink] = "['/details']">Details</a></li>
+            <li><a [routerLink] = "['/history']">History</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+    
 
    
-
-<app-calendar></app-calendar>
+<router-outlet></router-outlet>
