--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,5 +1,6 @@
 
-	<div class="month" id="mounth">
+	<div class = "container" *ngIf = "isSelectedDate === false">
+		<div class="month" id="mounth">
 		<ul>
 			<li class="prev" (click) = "changeDate($event)" >&#10094;</li>
 			<li class="next" (click) = "changeDate($event)">&#10095;</li>
@@ -25,6 +26,9 @@
 	</ul>
 	
 	
+	<h1>Select date to view your check-ins in the past</h1>
 
-	<geo-map [currentKey] = "currentKey"></geo-map>
+	</div>
+	
+	<geo-map [currentKey]  = "currentKey" (mapClosed) = 'changeView($event)'  *ngIf = "isSelectedDate === true"></geo-map>
   
