--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+<div class="container" id = "wrapper">
 
   <div class="row" >
 		<div class="col-md-12">
@@ -82,6 +82,8 @@
 
     </div>
   </div>
-
+ <a href="#" (click) = "closeMap($event)" class="btn btn-default btn-lg">
+          <span class="glyphicon glyphicon-remove"></span> Close 
+        </a>
 </div>
 
